
plugins {
	id "java"
	id "eclipse"
}

dependencies {
	implementation project(":protocol-game")
	implementation project(":backend-rpc-protocol")
	implementation project(":voice-api")
	implementation project(":voice-rpc-protocol")
	implementation project(":api")
	implementation project(":api-bukkit")
	implementation project(":api-bungee")
	implementation project(":api-velocity")
	implementation project(":skin-cache")
	compileOnly project(":stubs")
	compileOnly(libs.bungeecord.api)
	compileOnly(libs.velocity.api)
	compileOnly(libs.velocity.legacy.serializer)
	compileOnly(libs.velocity.nightconfig)
	compileOnly(libs.paper.api)
	compileOnly(libs.bundles.netty.all)
	annotationProcessor(libs.velocity.api)
}

java {
	sourceCompatibility = JavaVersion.VERSION_11
	targetCompatibility = JavaVersion.VERSION_11
}

jar {
	compileJava.options.encoding = "UTF-8"
	javadoc.options.encoding = "UTF-8"
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
	from {
		configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
	}
}
